# django-crud-articles

./: .env.docker  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start-django.sh  tailwind.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_userprofile_email.py  0005_alter_userprofile_managers.py
djangocourse01/: asgi.py  settings.py  urls.py  wsgi.py
static/: input.css  output.css
templates/app/: base.html  create_article.html  delete_article.html  home.html  update_article.html
