[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana De Souza",email = "ana.desouza@segu360.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-allauth[socialaccount] (>=65.11.1,<66.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "djangocourse", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"
django-browser-reload = "^1.18.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
